# octo

./: .gitignore  CMakeLists.txt  README.md  build-debug.sh  build-release.sh  build.sh  install_deps  octo.json
engine/: CMakeLists.txt  README.md  build.sh
engine/include/: octo.hpp
engine/include/core/: context.hpp  defines.hpp  definitions.hpp  logger.hpp  window.hpp
engine/include/renderer/: renderer.hpp
engine/src/core/: logger.cpp  window.cpp
engine/src/renderer/: renderer.cpp
include/: defines.hpp  dictionary.hpp  logger.hpp  octo.hpp  renderer.hpp  tests.hpp  utils.hpp
octo/: CMakeLists.txt
octo/include/: defines.hpp  logger.hpp  octo.h  octo.hpp  utils.hpp  version.hpp
octo/include/core/: context.h  context.hpp  defines.h  defines.hpp  definitions.hpp.old  dynamic_array.h  events.h  game.h  logger.h  logger.hpp  renderer.hpp  shader.hpp  time.h  version.hpp  vertex.hpp  window.h  window.hpp
octo/include/core/defines/: gamepad_defs.h  keyboard_defs.h  mouse_defs.h
octo/include/renderer/: renderer.hpp
octo/src/: dynamic_array.c  events.c  game.c  logger.c  logger.cpp  octo.cpp  renderer.cpp  shader.cpp  time.c  window.c  window.cpp
old/: README.md
old/engine/include/core/: context.hpp  logger.hpp
old/engine/src/renderer/: renderer.cpp
old/octo/include/core/: window.hpp
old/octo/src/: window.cpp
src/: dictionary.cpp  logger.cpp  main.cpp  octo.cpp  renderer.cpp  shader.cpp  tests.cpp  vertex.hpp  window.cpp
src/core/: application.cpp  application.hpp  application_desc.hpp  context.hpp  defaults.hpp  defines.hpp  logger.cpp  logger.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  types.hpp  version.hpp  window.cpp  window.hpp
src/ecs/components/: base.hpp
src/input/: input.cpp  input.hpp
src/renderer/: renderer.cpp  renderer.hpp  shader.hpp
src/shaders/: depth_shader.hpp
src/utils/: event_emitter.hpp  file_io.cpp  file_io.hpp  logger.cpp  singleton.hpp
src_OLD/core/: defines.hpp
src_OLD/utils/: shader.cpp  shader.hpp
test/: CMakeLists.txt  README.md
test/src/: main.c  main.cpp
vulkan-tutorial/: main.cpp
